// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TaskInfo rendering render with Props 1`] = `
<Grid
  bsClass="container"
  componentClass="div"
  fluid={false}
>
  <br />
  <Row
    bsClass="row"
    componentClass="div"
    key="0"
  >
    <Col
      bsClass="col"
      componentClass="div"
      md={2}
      sm={6}
    >
      <span
        className="list-group-item-heading"
      >
        Name
        :
      </span>
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      md={5}
      sm={6}
    >
      <span>
        <EllipisWithTooltip>
          Monitor Event Queue
        </EllipisWithTooltip>
      </span>
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      md={2}
      sm={6}
    >
      <span
        className="list-group-item-heading"
      >
        Start at
        :
      </span>
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      md={3}
      sm={6}
    >
      <FormattedRelative
        updateInterval={10000}
        value={2019-06-17T13:04:09.000Z}
      />
    </Col>
  </Row>
  <Row
    bsClass="row"
    componentClass="div"
    key="1"
  >
    <Col
      bsClass="col"
      componentClass="div"
      md={2}
      sm={6}
    >
      <span
        className="list-group-item-heading"
      >
        Result
        :
      </span>
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      md={5}
      sm={6}
    >
      <span>
        <i
          className="task-status pficon-help"
        />
        <span>
           
          error
        </span>
      </span>
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      md={2}
      sm={6}
    >
      <span
        className="list-group-item-heading"
      >
        Started at
        :
      </span>
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      md={3}
      sm={6}
    >
      <FormattedRelative
        updateInterval={10000}
        value={2019-06-17T13:04:09.000Z}
      />
    </Col>
  </Row>
  <Row
    bsClass="row"
    componentClass="div"
    key="2"
  >
    <Col
      bsClass="col"
      componentClass="div"
      md={2}
      sm={6}
    >
      <span
        className="list-group-item-heading"
      >
        Triggered by
        :
      </span>
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      md={5}
      sm={6}
    >
      <span>
        admin
      </span>
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      md={2}
      sm={6}
    >
      <span
        className="list-group-item-heading"
      >
        Ended at
        :
      </span>
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      md={3}
      sm={6}
    >
      N/A
    </Col>
  </Row>
  <Row
    bsClass="row"
    componentClass="div"
    key="3"
  >
    <Col
      bsClass="col"
      componentClass="div"
      md={2}
      sm={6}
    >
      <span
        className="list-group-item-heading"
      >
        Execution type
        :
      </span>
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      md={5}
      sm={6}
    >
      <span>
        Immediate
      </span>
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      md={2}
      sm={6}
    >
      <span
        className="list-group-item-heading"
      >
        Start before
        :
      </span>
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      md={3}
      sm={6}
    >
      -
    </Col>
  </Row>
  <br />
  <Row
    bsClass="row"
    componentClass="div"
  >
    <Col
      bsClass="col"
      componentClass="div"
      xs={6}
    >
      <div
        className="progress-description"
      >
        <span
          className="list-group-item-heading"
        >
          State
          : 
        </span>
        paused
      </div>
    </Col>
    <Col
      bsClass="col"
      className="progress-label-top-right"
      componentClass="div"
      xs={3}
      xsOffset={3}
    >
      <span>
        0.5% Complete
      </span>
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      xs={12}
    >
      <ProgressBar
        active={false}
        bsClass="progress-bar"
        bsStyle="danger"
        isChild={false}
        max={100}
        min={0}
        now={0.5}
        srOnly={false}
        striped={true}
      />
    </Col>
  </Row>
  <br />
  <Row
    bsClass="row"
    componentClass="div"
  >
    <Col
      bsClass="col"
      componentClass="div"
      xs={12}
    >
      <p>
        <span>
          <b>
            Troubleshooting
          </b>
        </span>
      </p>
      <p>
        A paused task represents a process that has not finished properly. Any task in paused state can lead to potential inconsistency and needs to be resolved.
        <br />
        The recommended approach is to investigate the error messages below and in 'errors' tab, address the primary cause of the issue and resume the task.
        <br />
      </p>
    </Col>
  </Row>
</Grid>
`;

exports[`TaskInfo rendering render without Props 1`] = `
<Grid
  bsClass="container"
  componentClass="div"
  fluid={false}
>
  <br />
  <Row
    bsClass="row"
    componentClass="div"
    key="0"
  >
    <Col
      bsClass="col"
      componentClass="div"
      md={2}
      sm={6}
    >
      <span
        className="list-group-item-heading"
      >
        Name
        :
      </span>
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      md={5}
      sm={6}
    >
      <span>
        <EllipisWithTooltip>
          N/A
        </EllipisWithTooltip>
      </span>
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      md={2}
      sm={6}
    >
      <span
        className="list-group-item-heading"
      >
        Start at
        :
      </span>
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      md={3}
      sm={6}
    >
      N/A
    </Col>
  </Row>
  <Row
    bsClass="row"
    componentClass="div"
    key="1"
  >
    <Col
      bsClass="col"
      componentClass="div"
      md={2}
      sm={6}
    >
      <span
        className="list-group-item-heading"
      >
        Result
        :
      </span>
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      md={5}
      sm={6}
    >
      <span>
        <i
          className="task-status pficon-help"
        />
        <span>
           
          error
        </span>
      </span>
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      md={2}
      sm={6}
    >
      <span
        className="list-group-item-heading"
      >
        Started at
        :
      </span>
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      md={3}
      sm={6}
    >
      N/A
    </Col>
  </Row>
  <Row
    bsClass="row"
    componentClass="div"
    key="2"
  >
    <Col
      bsClass="col"
      componentClass="div"
      md={2}
      sm={6}
    >
      <span
        className="list-group-item-heading"
      >
        Triggered by
        :
      </span>
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      md={5}
      sm={6}
    >
      <span />
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      md={2}
      sm={6}
    >
      <span
        className="list-group-item-heading"
      >
        Ended at
        :
      </span>
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      md={3}
      sm={6}
    >
      N/A
    </Col>
  </Row>
  <Row
    bsClass="row"
    componentClass="div"
    key="3"
  >
    <Col
      bsClass="col"
      componentClass="div"
      md={2}
      sm={6}
    >
      <span
        className="list-group-item-heading"
      >
        Execution type
        :
      </span>
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      md={5}
      sm={6}
    >
      <span>
        Delayed
      </span>
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      md={2}
      sm={6}
    >
      <span
        className="list-group-item-heading"
      >
        Start before
        :
      </span>
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      md={3}
      sm={6}
    >
      -
    </Col>
  </Row>
  <br />
  <Row
    bsClass="row"
    componentClass="div"
  >
    <Col
      bsClass="col"
      componentClass="div"
      xs={6}
    >
      <div
        className="progress-description"
      >
        <span
          className="list-group-item-heading"
        >
          State
          : 
        </span>
      </div>
    </Col>
    <Col
      bsClass="col"
      className="progress-label-top-right"
      componentClass="div"
      xs={3}
      xsOffset={3}
    >
      <span>
        0% Complete
      </span>
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      xs={12}
    >
      <ProgressBar
        active={false}
        bsClass="progress-bar"
        bsStyle="danger"
        isChild={false}
        max={100}
        min={0}
        now={0}
        srOnly={false}
        striped={true}
      />
    </Col>
  </Row>
  <br />
</Grid>
`;
